app/styleguides/demo/components/latest-content.css
@import "_global/mixins";
@import "_global/fonts";
@import "_global/colors";

.component--latest-content {
  width: 100%;
  padding-bottom: em(80);
  align-self: center;

  h2 {
    @mixin latest-content-font1;
    width: 100%;
    position: relative;
    z-index: 1;
    text-align: center;
    color: $parisM;

    &:before {
      border-top: em(1, 20) solid $parisM;
      content: "";
      margin: 0 auto;
      position: absolute;
      top: 50%;
      left: 0;
      right: 0;
      bottom: 0;
      width: 100%;
      z-index: -1;
    }
    span {
      background: $white;
      padding: 0 em(15, 20);
    }
  }

  .latest-content__section {
    display: flex;
    padding-top: em(40);
    margin: 0 auto;
    max-width: em(widthOnGrid(12,11));

    @mixin medium-screen {
      flex-direction: column;
      padding-top: em(40);
    }
  }

  .section__article-list {
    padding-bottom: em(15);
    padding-right: em(20);
    width: 100%; /* IE11 */
    display: flex;
    flex-direction: column;

    & li:first-child {
      flex-grow: 1;
    }

    @mixin medium-screen {
      padding-right: 0;
    }

    &.section__article-list-- {
      &entertainment {
        order: 1;
      }
      &news {
        order: 2;
      }
      &sports {
        order: 3;
        padding-right: 0;
      }
    }
  }

  .articleList__link {
    text-decoration: none;
    display: flex;
    flex-direction: column;
    padding-bottom: em(30);
    position: relative;

    &:hover {
      .link__image {
        opacity: 0.9;
      }
      .link__label {
        text-decoration: underline;
        text-decoration-color: $black;
      }
    }

    &.articleList__link--subsequent {
      flex-direction: row;
      padding-bottom: em(20);

      @mixin medium-small-screen {
        flex-direction: column;
      }

      & .link__image {
        width: em(80);
        height: em(80);
        margin-right: em(20);

        @mixin medium-screen {
          flex: none;
          margin-right: em(20);
          width: em(widthOnGrid(3,2,medium-screen));
          height: em(193);
        }

        @mixin medium-small-screen {
          width: 100%;
          max-width: em(widthOnGrid(4,3,medium-small-screen));
          height: em(248);
        }

        @mixin small-screen {
          width: 100%;
          max-width: em(widthOnGrid(4,3,small-screen));
          height: em(180);
        }
      }

      & .link__label {
        @mixin latest-content-font3;
        padding-top: 0;

        @mixin medium-screen {
          @mixin latest-content-font2;
        }

        @mixin medium-small-screen {
          @mixin latest-content-font6;
          padding-top: em(15);
        }
      }
    }

    @mixin medium-screen {
      flex-direction: row;
      flex: none;
    }

    @mixin medium-small-screen {
      flex-direction: column;
    }
  }

  .link__label {
    @mixin latest-content-font2;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding-top: em(15);
    width: 100%; /* IE11 */

    @mixin medium-screen {
      @mixin latest-content-font2;
    }

    @mixin medium-small-screen {
      @mixin latest-content-font6;
        padding-top: em(15);
      }
  }

  .link__tag {
    @mixin latest-content-font4;
    height: em(26);
    position: absolute;
    top: 0;
    background-color: $parisM;
    padding: 0 em(6);
    line-height: em(26);

    &:first-letter {
       text-transform: uppercase;
     }

    &--news {
       background-color: $lightningYellow;
     }
    &--entertainment {
       background-color: $sunsetOrange;
     }
    &--sports {
       background-color: $azureRadience;
     }

    @mixin medium-small-screen {
      @mixin latest-content-font7;
      height: em(33);
      line-height: em(33);
    }
  }

  .link__image {
    width: em(widthOnGrid(4,3));
    height: em(168);
    object-fit: cover;

    @mixin medium-screen {
      width: em(widthOnGrid(3,2,medium-screen));
      height: em(193);
      flex: none;
      margin-right: em(20);
    }

    @mixin medium-small-screen {
      width: 100%;
      max-width: em(widthOnGrid(4,3,medium-small-screen));
      height: em(248);
    }

    @mixin small-screen {
      width: 100%;
      max-width: em(widthOnGrid(4,3,small-screen));
      height: em(180);
    }
  }

  @mixin medium-small-screen {
    padding-bottom: em(30);
  }
}

